css/slides.css
/* ... */
.dialog .center-m-down {
	border-top: 1px solid rgba(0, 0, 0, 0.1);
	padding: 10px;
	margin-bottom: 0;
}

.dialog a {
	text-align: center;
	cursor: pointer;
	vertical-align: middle;
	text-decoration: none;
	border-bottom: none;
	-webkit-transition: 0.25s;
	transition: 0.25s;
	box-shadow: inset 0 -100px 0 rgba(41, 41, 41, 0);
}

.dialog .text {
	position: fixed;
	left: 0;
	right: 0;
	top: 0;
	margin-top: 13%;
	color: #fff;
}

.dialog .dialogContent {
	padding: 20px;
}

.dialog .close.white:after, .dialog .close.white:before {
	background: #fff;
}

.dialog .close:before {
	-webkit-transform: rotate(-45deg);
	transform: rotate(-45deg);
	position: absolute;
	content: "";
	width: 18px;
	height: 2px;
	border-radius: 2px;
	background: #fff;
	left: 15px;
}

.dialog .close:after {
	-webkit-transform: rotate(45deg);
	transform: rotate(45deg);
	position: absolute;
	content: "";
	width: 18px;
	height: 2px;
	border-radius: 2px;
	background: #fff;
	left: 15px;
}

.dialog .close.white {
	background: transparent !important;
}

.dialog .close {
	padding: 30px;
	position: absolute;
	font-size: 0;
	top: 0;
	left: 0;
	cursor: pointer;
	z-index: 10;
}

/*iphone4+*/

@media only screen and (min-width: 320px) and (max-width: 480px) and (-webkit-min-device-pixel-ratio: 2) {
	h1 {
		font-size: 33px !important;
	}
	p {
		font-size: 20px;
	}
	p.hero {
		font-size: 20px;
	}
	.small {
		font-size: 20px !important;
	}
	.common-Button {
		font-size: 14px;
	}
	.container .wrap {
		padding: calc(5.56% + 50px) calc(5% + 0px) !important;
	}
	.col-6-12 a {
		margin-bottom: 24px;
	}
	.img-fade {
		background: rgba(16, 114, 187, 0.80);
	}
	.img-size {
		width: 280px !important;
	}
	.phones .reverse {
		flex-wrap: wrap !important;
	}
	.border-bottom {
		width: 80%;
	}
	.contact h1 {
		margin-top: 20px;
	}
	#team .col-3-12 {
		width: 100%;
	}
	.cell img {
		padding-bottom: 25px;
	}
	#partners .margin-bottom-8 {
		margin-bottom: 30px !important;
	}
	.popup #team .wrap {
		padding: 0;
	}
	.popup #team .fix-10-12 {
		padding-top: 15%;
	}
	#ispect-details .margin-top-1 {
		margin-top: 30% !important;
	}
	#ispect-details .col-6-12 {
		max-width: 100%;
	}
	#news-title {
		margin-top: 25px;
	}
	#ispect-projects .wrap {
		padding: 0 !important;
	}
	#partners ul {
		float: none !important;
	}
	#ispect-projects h1 {
		margin-top: 85px;
	}
	#ispect-projects p {
		margin-bottom: 0;
		padding-bottom: 0;
	}
	.photobanner img {
		margin-top: 50px;
	}
}

/* phone portrait and > */

@media (max-width: 435px) {
	.flex>[class*='col-'] {
		width: 100%;
	}
}

@media (max-width: 768px) {
	.leftControl-83, .rightControl-83 {
		display: none;
	}
}

/*MAX WIDTH FOR DESKTOP*/

@media (min-width: 1024px) {
	.sliderBox-83 {
		margin-top: 15%;
	}
	.iphone-29 {
		margin-top: -228px;
		margin-bottom: -228px;
	}
	img.macbook-61 {
		margin: -10% -100% -10% -135% !important;
		width: 225%;
		max-width: none;
	}
	img.macbook-62 {
		margin: 0% -100% -10% 10% !important;
		max-width: none;
		width: 225%;
	}
}

/*MAX WIDTH FOR DESKTOP*/

@media (max-width: 1023px) {
	.cell-32 {
		padding-bottom: 40px;
	}
	.cell-29 {
		padding-bottom: 35px;
	}
	.flex:not(.later)>[class*='col-']:not([class*='col-phablet-']):not([class*='col-phone-']) {
		width: 100%;
	}
}

/* iphone6+ Portrait and Landscape */

@media only screen and (min-width: 375px) and (max-width: 768px) {}

.items-container li.hidden {
	display: none;
}

/***
 *      _____                 _
 *     |  __ \               | |
 *     | |__) __ _ _ __   ___| |____
 *     |  ___/ _` | '_ \ / _ | / __/
 *     | |  | (_| | | | |  __| \__ \
 *     |_|   \__,_|_| |_|\___|_/___/
 *
 *
 */

.panel {
	position: fixed;
	left: 0;
	width: 100%;
	padding: 0.5% 0.8%;
	z-index: 200;
	text-align: center;
	font-size: 22px;
	-webkit-backface-visibility: hidden;
	backface-visibility: hidden;
	-webkit-user-select: none;
	-moz-user-select: none;
	-ms-user-select: none;
	user-select: none;
	-webkit-transform: translate3d(0, 0, 0);
	transform: translate3d(0, 0, 0);
}

.soft-shadow {
	background: rgba(255, 255, 255, .98);
	box-shadow: 0 15px 35px rgba(50, 50, 93, .1), 0 5px 15px rgba(0, 0, 0, .07), inset 0 -2px 0 0 #f6f9fc;
}

.panel.top {
	top: 0;
}

.panel .sections {
	display: table;
	width: 100%;
	max-width: 1080px;
	margin: 0 auto;
	font-size: 0;
}

.panel .sections>div {
	display: table-cell;
	vertical-align: middle;
	text-align: center;
	width: 33.33333%;
	white-space: nowrap;
	font-size: 22px;
	height: 50px;
}

.panel .sections>div * {
	pointer-events: all;
}

.panel .sections>div.left {
	text-align: left;
}

.panel .sections>div.left ul.crop {
	padding-left: 0;
}

.panel .sections>div.left ul.crop li:first-child {
	margin-left: 0;
}

.panel .sections>div.right {
	text-align: right;
}

.panel .sections>div.right ul.crop {
	padding-right: 0;
}

.panel .sections>div.right ul.crop li:last-child {
	margin-right: 0;
}

.panel .sections.hidden {
	display: none;
}

.panel .sections .menu {
	white-space: nowrap;
	display: inline-block;
	padding: 0 20px;
	font-size: 0;
}

.panel .sections .menu li {
	font-size: 22px;
	display: inline-block;
	margin: 0 10px;
}

.panel .sections .menu li a {
	padding: 4px 10px 5px;
}

.panel .sections .menu.small li {
	font-size: 16px;
	margin: 0 4px;
}

.panel .hidden, .panel .hidden * {
	display: none;
}

.panel svg {
	fill: #fff;
	width: 22px;
	height: 22px;
}

.panel a:not(.button):hover {
	opacity: 0.75;
	-webkit-transition: 0.15s;
	transition: 0.15s;
}

.panel .button {
	margin: 0;
}

.hidden {
	display: none;
}

/* ipad portrait and smaller */

@media (max-width: 766px) {
	.panel {
		padding: 2.78% 5%;
	}
}

/* preloader */

/***
 *       _____       _
 *      / ___/( )   | |
 *     | (___  _  __| | ___
 *      \___ \| |/ _` |/ _ \
 *      ____) | | (_| |  __/
 *     /_____/|_|\__,_|\___/
 *
 *
 */

.slider {
	position: relative;
}

.slider.clickable {
	cursor: pointer;
}
/* ... */

